/*
 * $Id: ChangeLog,v 1.2883 2004/05/07 14:55:31 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-07 17:30 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * include/inkey.ch
  * source/rtl/gtwin/gtwin.c
  * source/rtl/gtwvt/gtwvt.c
  * source/rtl/gtcrs/gtcrs.c
  * source/rtl/gtxvt/gtxvt.c
    * added support for K_SH_UP, K_SH_DOWN, K_SH_LEFT, K_SH_RIGHT
    * removed HB_INKEY_RAW, HB_INKEY_EXTENDED, HB_K_MULTICODE from inkey.ch
  * source/odbc/hdo_odbc.prg
    * added more error checking
  * source/rdd/dbcmd.c
    * used hb_conNewLine() instead of fixed \r\n

2004-05-07 12:00 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * source/rtl/tgetlist.prg
    ! minor fix on envar when using get with tbrowse( ::nLastExitStat to ::nLastExitState )

2004-05-07 16:45 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/debugger.prg
    * Fixed behaviour for paths ending with directory delimiters.

2004-05-07 16:15 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/dbgtarr.prg
    ! Fixed monitoring of empty subarrays.

2004-05-07 14:00 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * contrib/libct/count.c
    ! Fixed COUNTLEFT() and COUNTRIGHT(), thanks to Valery Belorustcev.

2004-05-07 15:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/filesys.c
    - fixed typo :  proc.dwProcessID -> proc.dwProcessId

  * contrib/winprn/tprint.prg
    - added missing
          #include "hbapiitm.h"

2004-05-07 11:45 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/vm/cmdarg.c
  * source/vm/mainwin.c
    - Move global variables from mainwin -> cmdarg
    + added hb_SetWinMainParameters()

    Changes required to allow linking to harbour.dll

  * source/rtl/inkey.c
    - Fix Warning 'bContinue' is assigned a value that is never used
